<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PetAdopt</string>
    <string name="action_settings">Settings</string>
    <string name="homepage">主页</string>
    <string name="classification">分类</string>
    <string name="collection">收藏</string>
    <string name="account">账户</string>
    <string name="more">更多</string>
    <string name="dog">狗</string>
    <string name="cat">猫</string>
    <string name="other">其他</string>
    <string name="adoption">领养</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
