<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classification" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/dog" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/more" />
    </LinearLayout>

    <com.wwm.petadopt.HorizontalListView
        android:id="@+id/horizontal_listview_dog"
        android:layout_width="match_parent"
        android:layout_height="170dp" >
    </com.wwm.petadopt.HorizontalListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/cat" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/more" />
    </LinearLayout>

    <com.wwm.petadopt.HorizontalListView
        android:id="@+id/horizontal_listview_cat"
        android:layout_width="match_parent"
        android:layout_height="170dp" >
    </com.wwm.petadopt.HorizontalListView>

</LinearLayout>